--- a/imdb/requirements.txt
+++ b/imdb/requirements.txt
@@ -6,6 +6,7 @@ cement==2.8.2
 certifi==2018.4.16
 chardet==3.0.4
 colorama==0.3.9
+dj-database-url==0.5.0
 Django==2.0.6
 djangorestframework==3.8.2
 docker==3.3.0
@@ -21,6 +22,7 @@ ipaddress==1.0.22
 jmespath==0.9.3
 jsonschema==2.6.0
 pathspec==0.5.5
+psycopg2==2.7.4
 python-dateutil==2.7.3
 pytz==2018.4
 PyYAML==3.12
