--- a/imdb/requirements.txt
+++ b/imdb/requirements.txt
@@ -17,6 +17,7 @@ docopt==0.6.2
 docutils==0.14
 elasticsearch==6.2.0
 elasticsearch-dsl==6.1.0
+gunicorn==19.8.1
 idna==2.6
 ipaddress==1.0.22
 jmespath==0.9.3
